--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_classic/styles/appearance.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_classic/styles/appearance.css
@@ -381,7 +381,7 @@ FORM BG			#FFFFFF
 	
 		/*GENERAL*/
 		
-	.listItem {
+	.listItem, .listItem td {
 		border-top-color: #B9B9B9 !important;
 	}
 	
