--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_highContrast/styles/appearance.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/themes/skin_highContrast/styles/appearance.css
@@ -381,7 +381,7 @@ FORM BG			#F2F8FC
 	
 		/*GENERAL*/
 		
-	.listItem {
+	.listItem, .listItem td {
 		border-top-color: #AEAEAE !important;
 	}
 	
