--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/pubman_component_css/lists.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/pubman_component_css/lists.css
@@ -252,6 +252,11 @@
 	margin-left: -0.65em;
 }
 
+.listItem .itemCheckBox, .listItem .itemCheckBox * {
+	float: right;
+	border-width: 0px;
+}
+
 .listItem td .statusIcon {
 	margin-top: 0.09em;
 	margin-left: 0em;
