--- a/pubman/pubman_presentation/src/main/webapp/home/BlogIntegration.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/BlogIntegration.jspf
@@ -40,8 +40,7 @@
     function initialize() 
     {    	
       var feedControl = new google.feeds.FeedControl();
-      //QuickSearch does not work with hidden field (no idea why!!!) therefor i have to put url static.
-      feedControl.addFeed("http://pubman.blogs.mpdl.mpg.de/feed/", "");
+      feedControl.addFeed('<h:outputText value="#{ApplicationBean.pubmanBlogFeedUrl}"/>', "");
       feedControl.setNumEntries(4);
       feedControl.setLinkTarget(google.feeds.LINK_TARGET_BLANK); 
       feedControl.draw(document.getElementById("feedControl"));
@@ -54,8 +53,8 @@
 	</h2>
 	<div id="feedControl" style="font-size: 0.4em"></div>
 </h:panelGroup>
-<h:panelGroup rendered="#{!ApplicationBean.checkSystemTypeProduction}">
+ 
+<h:panelGroup >
     <h:outputText id="blogDisabled" value="#{lbl.Home_Header_News_Disabled}"/>
 </h:panelGroup>
-
 
