--- a/pubman/pubman_presentation/src/main/webapp/home/LastReleased.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/LastReleased.jspf
@@ -33,7 +33,7 @@
 		<f:loadBundle var="tip" basename="Tooltip"/>
 
 <!-- TODO: Exchange this with lastsubmitted feed -->
-<h:panelGroup rendered="#{ApplicationBean.checkSystemTypeProduction}">
+<h:panelGroup >
     <script src="http://www.google.com/jsapi" type="text/javascript">&#160;</script> 
     <script type="text/javascript">
     google.load("feeds", "1");
@@ -41,7 +41,6 @@
       function initialize() 
       {     
     	  var feedControl = new google.feeds.FeedControl();
-    	  //QuickSearch does not work with hidden field (no idea why!!!) therefor i have to put url static.
         feedControl.addFeed('<h:outputText value="#{ApplicationBean.pubmanInstanceUrl}"/>'+'/syndication/feed/atom_1.0/releases', "");
         feedControl.setNumEntries(4); 
         feedControl.draw(document.getElementById("feedControl2"));
@@ -54,9 +53,10 @@
     </h2>
     <div id="feedControl2" style="font-size: 0.4em"></div>
 </h:panelGroup>
+<!-- 
 <h:panelGroup rendered="#{!ApplicationBean.checkSystemTypeProduction}">
     <h:outputText id="rssFeedDisabled" value="#{lbl.Home_Header_LastItems_Disabled}"/>
 </h:panelGroup>
-
+ -->
 
 
