--- a/pubman/pubman_presentation/src/main/webapp/home/LastReleased.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/LastReleased.jspf
@@ -33,7 +33,7 @@
 		<f:loadBundle var="tip" basename="Tooltip"/>
 
 <!-- TODO: Exchange this with lastsubmitted feed -->
-<h:panelGroup >
+<h:panelGroup rendered="#{ApplicationBean.checkSystemTypeProduction}">
     <script src="http://www.google.com/jsapi" type="text/javascript">&#160;</script> 
     <script type="text/javascript">
     google.load("feeds", "1");
@@ -53,10 +53,9 @@
     </h2>
     <div id="feedControl2" style="font-size: 0.4em"></div>
 </h:panelGroup>
-<!-- 
 <h:panelGroup rendered="#{!ApplicationBean.checkSystemTypeProduction}">
     <h:outputText id="rssFeedDisabled" value="#{lbl.Home_Header_LastItems_Disabled}"/>
 </h:panelGroup>
- -->
+
 
 
