--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/contextList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/contextList.jspf
@@ -35,7 +35,7 @@ All rights reserved. Use is subject to license terms.
 	TODO: There is another contextList.jspf under /list. One of the two should be removed.
  -->
 
-<tr:iterator id="iterDepositorContextList" var="context" value="#{ContextListSessionBean.depositorContextList}" binding="#{ContextListSessionBean.contextIterator}" varStatus="index">
+<tr:iterator id="iterDepositorContextList" var="context" value="#{ContextListSessionBean.depositorContextList}" binding="#{ContextListSessionBean.contextIterator}" rows="0" varStatus="index">
 
 	<h:panelGroup layout="block" styleClass="full_area0 itemHeader noTopBorder" rendered="#{ContextListSessionBean.contextIterator.rowIndex == 0}">
 		<span class="xLarge_area0 endline">
@@ -44,9 +44,9 @@ All rights reserved. Use is subject to license terms.
 		<span class="seperator"></span>
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
-				<h:commandLink id="lnkSelectForEasySubmissionFirst" title="#{tip.EasySubmission_select}" action="#{context.selectForEasySubmission}">
-					<h:outputText value="#{context.name}"/>
-				</h:commandLink>
+				<tr:commandLink id="lnkSelectForEasySubmissionFirst" shortDesc="#{tip.EasySubmission_select}" action="#{context.selectForEasySubmission}">
+					<tr:outputText value="#{context.name}"/>
+				</tr:commandLink>
 			</b>
 		</span>
 	</h:panelGroup>
@@ -57,9 +57,9 @@ All rights reserved. Use is subject to license terms.
 		<span class="seperator"></span>
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
-				<h:commandLink id="lnkSelectForEasySubmissionFollowing" title="#{tip.EasySubmission_select}" action="#{context.selectForEasySubmission}">
-					<h:outputText value="#{context.name}"/>
-				</h:commandLink>
+				<tr:commandLink id="lnkSelectForEasySubmissionFollowing" shortDesc="#{tip.EasySubmission_select}" action="#{context.selectForEasySubmission}">
+					<tr:outputText value="#{context.name}"/>
+				</tr:commandLink>
 			</b>
 		</span>
 	</h:panelGroup>
