FIXED PUBMAN-1185 and removed another unesssesary ID

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/ViewItemShort.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/ViewItemShort.jspf
@@ -64,7 +64,7 @@
 			<h:outputText id="lblViewItemShort_lblFile" value="#{lbl.ViewItemShort_lblFile}"/><span class="noDisplay">: </span>
 		</span>
 		<h:panelGroup styleClass="xHuge_area0 endline" rendered="#{item.numberOfFiles > 0}">
-			<span class="files"><h:outputLink id="lnkFiles" value="#{item.link}#files"><h:outputText value="#{item.fileInfo}"/></h:outputLink></span>
+			<h:outputLink styleClass="files" id="lnkFiles" value="#{item.link}#files"><h:outputText value="#{item.fileInfo}"/></h:outputLink>
 		</h:panelGroup>
 		<h:panelGroup styleClass="xHuge_area0 endline" rendered="#{item.numberOfFiles == 0}">
 			<h:outputText id="lblViewItemFull_lblNoEntryFile" value="#{lbl.ViewItemFull_lblNoEntry}"/>
@@ -75,7 +75,7 @@
 			<h:outputText id="lblViewItemShort_lblLocator" value="#{lbl.ViewItemShort_lblLocator}"/><span class="noDisplay">: </span>
 		</span>
 		<h:panelGroup styleClass="xHuge_area0 endline" rendered="#{item.numberOfLocators > 0}">
-			<span class="locators"><h:outputLink id="lnkLocatorInfo" value="#{item.link}#locators"><h:outputText value="#{item.locatorInfo}"/></h:outputLink></span>
+			<h:outputLink styleClass="locators" id="lnkLocatorInfo" value="#{item.link}#locators"><h:outputText value="#{item.locatorInfo}"/></h:outputLink>
 		</h:panelGroup>
 		<h:panelGroup styleClass="xHuge_area0 endline" rendered="#{item.numberOfLocators == 0}">
 			<h:outputText id="lblViewItemFull_lblNoEntryLocator" value="#{lbl.ViewItemFull_lblNoEntry}"/>
