reunited FACES and PUBMAN CSS

--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/lists.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/eSciDoc_component_css/lists.css
@@ -109,6 +109,18 @@
 	text-align: right;
 }
 
+.tiledList .lineToolSection, .tiledList .sectionToolSection {
+	float: right;
+}
+
+.tiledList .lineToolSection .groupTool, .tiledList .sectionToolSection .groupTool {
+	float: left;
+}
+
+.tiledList .lineToolSection .sectionTool, .tiledList .sectionToolSection .sectionTool {
+	float: right;
+}
+
 /*STATUS RELATED ELEMENTS*/
 
 .listHeader .status, .listItem .status {
