--- a/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/pubman_component_css/extPaginator.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/eSciDoc_CSS_v2/pubman_component_css/extPaginator.css
@@ -126,6 +126,10 @@
 	.pageBrowser {
 		margin-top: 0.09em;
 	}
+	
+	.pageBrowser > a {
+		margin-top: 0.65em;
+	}
 
 	.pageBrowser input, .pageBrowser button {
 		height: 2.45em;
