PUBMAN-1281 fixed: not possible to choose creator type Organization with IE 7

--- a/pubman/pubman_presentation/src/main/webapp/editItem/SourceGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/SourceGroup.jspf
@@ -141,7 +141,7 @@
 								</b>
 								<span class="xHuge_area0 xTiny_marginLExcl endline">
 									<h:selectOneRadio id="selSourceCreatorType" styleClass="medium_radioBtn double_area0" value="#{creatorBean.creator.typeString}" 
-										valueChangeListener="#{creatorBean.processCreatorTypeChanged}" onchange="submit();" >
+										valueChangeListener="#{creatorBean.processCreatorTypeChanged}" onclick="submit();" >
 										<f:selectItems value="#{creatorBean.creatorTypes}"/>
 									</h:selectOneRadio>
 								</span>
